# google-sheets-cli

./: .gitignore  Cargo.toml  README.md
src/: app.rs  auth.rs  commands.rs  config.rs  main.rs  sheets.rs  table.rs
